--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-img{
-	width:100px;
-	height:100px;
+body{
+	background-image: url("allstarwars.png"); 
+	text-align: center;
+	font-family: "Lucida Console";
 }
