--- a/main.css
+++ b/main.css
@@ -1,5 +1,21 @@
 body{
-	background-image: url("allstarwars.png"); 
+	background-image: url("vaporwave.gif");
+	/*Makes gif cover whole page regardless of system */
+	    -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover; 
 	text-align: center;
+	font-size: 18px;
 	font-family: "Lucida Console";
+}
+.button{
+	cursor: pointer;
+}
+.beat{
+	font-size: 10px;
+}
+#mainPic{
+	width: 200px;
+	height: 200px;
 }
